--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.0",
     "ethers": "^5.7.1",
     "graphql": "^16.6.0",
     "next": "latest",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "urql": "^3.0.3"
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
